Fix broken CSS rule to show ImageGallery thumbnails on desktop viewport

--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -85,8 +85,10 @@
   align-items: center;
   display: none;
   margin-block-start: 30px;
+}
 
-  @media screen and (min-width: 60rem) {
+@media screen and (min-width: 60rem) {
+  .image-gallery-thumbnails-wrapper {
     display: grid;
   }
 }
